--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -11,7 +11,7 @@
 <body>
     <div class="main-content">
         {{>header}}
-
+        <p>This site was created by Zak. It helps to get the weather from a public API.</p>
       
     </div>
 
